--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -1536,6 +1536,10 @@ video {
 .bg-\[\] {
   background-color: ;
 }
+.bg-\[\#F2F2F2\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
+}
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
