--- a/assets/scss/assets/_algemeen.scss
+++ b/assets/scss/assets/_algemeen.scss
@@ -217,8 +217,8 @@ main {
 
   iframe {
     width: 100% !important;
-    height: auto !important;
-    aspect-ratio: 16/9 !important;
+    // height: auto !important;
+    // aspect-ratio: 16/9 !important;
   }
 }
 
