--- a/assets/scss/assets/_woocommerce.scss
+++ b/assets/scss/assets/_woocommerce.scss
@@ -1070,3 +1070,49 @@ body .wpc-filters-open-button-container a.wpc-open-close-filters-button {
     }
 
 }
+
+.wpc-orderby-select {
+    font-family: Karlsen, sans-serif !important;
+}
+
+.wpc-custom-selected-terms {
+    clear: both;
+    width: unset !important;
+    margin-right: 20px !important;
+}
+
+.wpc-filter-chips-list li,
+body .wpc-filter-chips-list li.wpc-filter-chip,
+li.wpc-filter-chip {
+    font-size: 11px !important;
+    line-height: 11px !important;
+    letter-spacing: 0.05em !important;
+}
+
+body .wpc-filter-chips-list li.wpc-filter-chip:not(.wpc-chip-reset-all) a {
+    border-color: #2B2828 !important;
+    font-family: Karlsen, sans-serif !important;
+    border-radius: 4px !important;
+    display: none !important;
+}
+
+body .wpc-filter-chips-list li.wpc-chip-reset-all a {
+    border-color: #2B2828 !important;
+    // background-color: #2B2828 !important;
+    color: #2B2828 !important;
+    font-family: Karlsen, sans-serif !important;
+    border-radius: 0px !important;
+    height: 37px !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    padding: 0px 20px !important;
+    margin-bottom: 10px !important;
+    transition-duration: 0.3s !important;
+
+    &:hover {
+        color: #fff !important;
+        background: #2B2828 !important;
+        transition-duration: 0.3s !important;
+    }
+}
