--- a/assets/scss/assets/_form.scss
+++ b/assets/scss/assets/_form.scss
@@ -12,7 +12,7 @@
     input[type="submit"] {
         background-color: #000;
         border: none;
-        width: 100px !important;
+        min-width: 100px !important;
         margin: 0 !important;
         font-size: 21px;
         color: #fff;
