--- a/assets/scss/assets/_woocommerce.scss
+++ b/assets/scss/assets/_woocommerce.scss
@@ -1116,3 +1116,11 @@ body .wpc-filter-chips-list li.wpc-chip-reset-all a {
         transition-duration: 0.3s !important;
     }
 }
+
+.select2-container--default .select2-results__option--highlighted[aria-selected],
+.select2-container--default .select2-results__option--highlighted[data-selected] {
+    background-color: #8cc63f !important;
+    color: #fff;
+    font-size: 16px !important;
+    font-family: karlsen, sans-serif !important;
+}
