--- a/assets/scss/assets/_woocommerce.scss
+++ b/assets/scss/assets/_woocommerce.scss
@@ -1096,26 +1096,43 @@ body .wpc-filter-chips-list li.wpc-filter-chip:not(.wpc-chip-reset-all) a {
     display: none !important;
 }
 
-body .wpc-filter-chips-list li.wpc-chip-reset-all a {
-    border-color: #2B2828 !important;
-    // background-color: #2B2828 !important;
-    color: #2B2828 !important;
-    font-family: Karlsen, sans-serif !important;
-    border-radius: 0px !important;
-    height: 37px !important;
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center !important;
-    padding: 0px 20px !important;
-    margin-bottom: 10px !important;
-    transition-duration: 0.3s !important;
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 1200px) {
+    body .wpc-filter-chips-list li.wpc-chip-reset-all a {
+        display: none !important;
 
-    &:hover {
-        color: #fff !important;
-        background: #2B2828 !important;
-        transition-duration: 0.3s !important;
     }
 }
+
+
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 1200px) {
+    body .wpc-filter-chips-list li.wpc-chip-reset-all a {
+        border-color: #2B2828 !important;
+        // background-color: #2B2828 !important;
+        color: #2B2828 !important;
+        font-family: Karlsen, sans-serif !important;
+        border-radius: 0px !important;
+        height: 37px !important;
+        display: flex !important;
+        justify-content: center !important;
+        align-items: center !important;
+        padding: 0px 20px !important;
+        margin-bottom: 10px !important;
+        transition-duration: 0.3s !important;
+
+        &:hover {
+            color: #fff !important;
+            background: #2B2828 !important;
+            transition-duration: 0.3s !important;
+        }
+    }
+}
+
+
+
+
 
 .select2-container--default .select2-results__option--highlighted[aria-selected],
 .select2-container--default .select2-results__option--highlighted[data-selected] {
