--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -2175,6 +2175,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(250 222 108 / var(--tw-text-opacity));
 }
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 @media (min-width: 768px) {
 
   .md\:bottom-0 {
