--- a/assets/scss/assets/_woocommerce.scss
+++ b/assets/scss/assets/_woocommerce.scss
@@ -116,6 +116,12 @@
         padding-bottom: 10px !important;
         border-radius: 0px !important;
         font-weight: 400 !important;
+        transition-duration: 0.3s !important;
+
+        &:hover {
+            background: #0A1F16 !important;
+            transition-duration: 0.3s !important;
+        }
     }
 
 
@@ -208,6 +214,11 @@
         border-radius: 0px !important;
         font-weight: 400 !important;
         margin-top: 0px !important;
+
+        &:hover {
+            background: #0A1F16 !important;
+            transition-duration: 0.3s !important;
+        }
     }
 
     .single_variation_wrap {
@@ -507,6 +518,11 @@ ins {
         border-radius: 0px !important;
         font-weight: 400 !important;
         color: #fff !important;
+
+        &:hover {
+            background: #0A1F16 !important;
+            transition-duration: 0.3s !important;
+        }
     }
 
     * {
