--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -1952,6 +1952,9 @@ video {
 .pt-\[91px\] {
   padding-top: 91px;
 }
+.pt-\[10px\] {
+  padding-top: 10px;
+}
 .text-left {
   text-align: left;
 }
