Add new Swiper slider for video content and update pagination in existing slider

--- a/assets/scss/assets/_slider.scss
+++ b/assets/scss/assets/_slider.scss
@@ -125,7 +125,8 @@
 .mySwiper-over-freek-section {
 
   .swiper-pagination,
-  .swiper-pagination-news {
+  .swiper-pagination-news,
+  .swiper-pagination-content {
     position: absolute;
     bottom: 52px;
     z-index: 10;
