--- a/assets/scss/assets/_algemeen.scss
+++ b/assets/scss/assets/_algemeen.scss
@@ -507,3 +507,15 @@ html {
     transform: scale(1);
   }
 }
+
+.iframe-video {
+  width: 95vw;
+  height: auto;
+  max-width: 700px;
+  aspect-ratio: 16/9;
+
+  iframe {
+    width: 100%;
+    height: 100%;
+  }
+}
