--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -702,9 +702,6 @@ video {
 .z-\[30\] {
   z-index: 30;
 }
-.z-\[3\] {
-  z-index: 3;
-}
 .z-\[40\] {
   z-index: 40;
 }
@@ -722,6 +719,12 @@ video {
 }
 .z-\[999\] {
   z-index: 999;
+}
+.z-\[100\] {
+  z-index: 100;
+}
+.z-\[1000\] {
+  z-index: 1000;
 }
 .order-1 {
   order: 1;
@@ -822,9 +825,6 @@ video {
 .ml-auto {
   margin-left: auto;
 }
-.mr-2 {
-  margin-right: 20px;
-}
 .mr-\[35px\] {
   margin-right: 35px;
 }
@@ -875,6 +875,9 @@ video {
 }
 .mt-\[8px\] {
   margin-top: 8px;
+}
+.mb-1 {
+  margin-bottom: 10px;
 }
 .line-clamp-1 {
   overflow: hidden;
@@ -1263,6 +1266,9 @@ video {
 .max-w-full {
   max-width: 100%;
 }
+.max-w-\[100vw\] {
+  max-width: 100vw;
+}
 .scale-105 {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
@@ -1505,6 +1511,9 @@ video {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(10 31 22 / var(--tw-bg-opacity));
+}
+.bg-black\/40 {
+  background-color: rgb(10 31 22 / 0.4);
 }
 .bg-bruin {
   --tw-bg-opacity: 1;
