--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -1958,6 +1958,9 @@ video {
 .pt-\[91px\] {
   padding-top: 91px;
 }
+.pt-\[60px\] {
+  padding-top: 60px;
+}
 .text-left {
   text-align: left;
 }
