--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -1295,6 +1295,9 @@ video {
 .items-center {
   align-items: center;
 }
+.justify-start {
+  justify-content: flex-start;
+}
 .justify-end {
   justify-content: flex-end;
 }
