--- a/assets/scss/assets/_slider.scss
+++ b/assets/scss/assets/_slider.scss
@@ -180,9 +180,18 @@
       position: absolute;
       z-index: 100;
       bottom: 40px;
+      right: 40px;
+      left: unset;
 
       @media (max-width: 767px) {
         bottom: 30px;
+      }
+
+      &:after {
+        justify-content: flex-start;
+        height: auto;
+        width: 100%;
+        display: flex;
       }
 
       &:after {
@@ -198,15 +207,24 @@
     }
 
     .swiper-button-prev-over-freek {
+      display: block;
+      position: absolute;
+      z-index: 100;
+      bottom: 40px;
+      left: 40px;
+      right: unset;
+
+      &:after {
+        justify-content: flex-start;
+        height: auto;
+        width: 100%;
+        display: flex;
+      }
 
       &:after {
         content: \url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="39.603" height="35.557" viewBox="0 0 39.603 35.557"><g id="Pijl_wit" data-name="Pijl wit" transform="translate(38.103 33.24) rotate(180)"><line id="Line_35" data-name="Line 35" x2="33.419" transform="translate(0 15.461)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/><line id="Line_36" data-name="Line 36" x2="19.921" y2="1.945" transform="translate(21.699) rotate(45)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/><line id="Line_37" data-name="Line 37" y1="1.945" x2="19.921" transform="translate(35.785 16.836) rotate(135)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/></g></svg>');
 
       }
-
-
-
-
 
       @media (max-width: 1200px) {
         &:after {
@@ -272,49 +290,3 @@
     }
   }
 }
-
-
-
-
-
-
-// .mySwiper-foto {
-//   .swiper-slide {
-//     flex-shrink: unset;
-//     width: 100%;
-//     height: 100%;
-//     position: relative;
-//     transition-property: transform;
-//   }
-// }
-
-
-// .bg-right-gradient {
-//   background: linear-gradient(270deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
-// }
-
-// .bg-left-gradient {
-//   background: linear-gradient(90deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
-// }
-
-
-// .mySwiper-video {
-//   .swiper-slide {
-//     opacity: 0.5;
-//   }
-
-
-
-//   .swiper-slide-active {
-//     opacity: 1;
-//   }
-
-
-//   @media (min-width: 1280px) {
-
-//     .swiper-slide-active,
-//     .swiper-slide-next {
-//       opacity: 1;
-//     }
-//   }
-// }
