--- a/assets/scss/assets/_algemeen.scss
+++ b/assets/scss/assets/_algemeen.scss
@@ -249,7 +249,18 @@ html {
 .bg-lichtoranje,
 .bg-bruin,
 .bg-donkergrijs,
-.bg-transwit {
+.bg-transwit,
+.bg-black,
+.bg-deepgrey,
+.bg-basisgrey,
+.bg-deepblue,
+.bg-basicblue,
+.bg-darkturquoise,
+.bg-deepturquoise,
+.bg-basisturquoise,
+.bg-lightturquoise,
+.bg-brightturquoise,
+.bg-basicred {
   .text-color {
     color: #fff !important;
   }
@@ -259,7 +270,15 @@ html {
 .bg-beige,
 .bg-lichtgrijs,
 .bg-grijs,
-.bg-transzwart {
+.bg-transzwart,
+.bg-lightgrey,
+.bg-brightgrey,
+.bg-lightblue,
+.bg-brightblue,
+.bg-lightturquoise,
+.bg-brightturquoise,
+.bg-lightred,
+.bg-brightred {
   .text-color {
     color: #0A1F16 !important;
   }
@@ -277,7 +296,18 @@ html {
   .bg-lichtoranje,
   .bg-bruin,
   .bg-donkergrijs,
-  .bg-transwit {
+  .bg-transwit,
+  .bg-black,
+  .bg-deepgrey,
+  .bg-basisgrey,
+  .bg-deepblue,
+  .bg-basicblue,
+  .bg-darkturquoise,
+  .bg-deepturquoise,
+  .bg-basisturquoise,
+  .bg-lightturquoise,
+  .bg-brightturquoise,
+  .bg-basicred {
     .text-color {
       color: #fff !important;
     }
@@ -287,7 +317,15 @@ html {
   .bg-beige,
   .bg-lichtgrijs,
   .bg-grijs,
-  .bg-transzwart {
+  .bg-transzwart,
+  .bg-lightgrey,
+  .bg-brightgrey,
+  .bg-lightblue,
+  .bg-brightblue,
+  .bg-lightturquoise,
+  .bg-brightturquoise,
+  .bg-lightred,
+  .bg-brightred {
     .text-color {
       color: #0A1F16 !important;
     }
