--- a/assets/scss/assets/_woocommerce.scss
+++ b/assets/scss/assets/_woocommerce.scss
@@ -1212,3 +1212,7 @@ body .wpc-filter-chips-list li.wpc-filter-chip:not(.wpc-chip-reset-all) a {
         transition-duration: 0.3s !important;
     }
 }
+
+.woocommerce-privacy-policy-text a {
+    color: #8cc63f !important;
+}
