--- a/assets/scss/assets/_woocommerce.scss
+++ b/assets/scss/assets/_woocommerce.scss
@@ -1216,3 +1216,7 @@ body .wpc-filter-chips-list li.wpc-filter-chip:not(.wpc-chip-reset-all) a {
 .woocommerce-privacy-policy-text a {
     color: #8cc63f !important;
 }
+
+.woocommerce-remove-coupon {
+    display: none !important;
+}
