--- a/assets/scss/assets/_cards.scss
+++ b/assets/scss/assets/_cards.scss
@@ -105,3 +105,19 @@
     }
 
 }
+
+.partners-hover {
+    &:hover {
+        div {
+            transition: all 0.3s ease-in-out;
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+
+    div {
+        transition: all 0.3s ease-in-out;
+        visibility: hidden;
+        opacity: 0;
+    }
+}
