--- a/assets/scss/assets/_acf.scss
+++ b/assets/scss/assets/_acf.scss
@@ -11,7 +11,7 @@
     h4,
     h5,
     h6 {
-        margin-block-start: 0px !important;
+        margin-block-start: 0 !important;
         margin-block-end: 15px !important;
     }
 
