--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -2226,6 +2226,9 @@ video {
 .opacity-\[0\.5\] {
   opacity: 0.5;
 }
+.opacity-0 {
+  opacity: 0;
+}
 .mix-blend-multiply {
   mix-blend-mode: multiply;
 }
@@ -2239,6 +2242,11 @@ video {
 }
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+.transition-opacity {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 .duration-200 {
   transition-duration: 200ms;
@@ -2272,6 +2280,9 @@ video {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.hover\:opacity-100:hover {
+  opacity: 1;
 }
 @media (min-width: 768px) {
 
